[gd_scene load_steps=5 format=3 uid="uid://c4lvsnq5ef3lw"]

[ext_resource type="Texture2D" uid="uid://crl3qcn34ark2" path="res://Assets/Sprites/octo.png" id="1_2bbek"]
[ext_resource type="Script" path="res://Scripts/page.gd" id="1_rvduy"]
[ext_resource type="FontFile" uid="uid://dbujpgfdoqmp3" path="res://Assets/Fonts/yoster.ttf" id="2_w4uf4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d2in3"]

[node name="Page" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -327.0
offset_top = -228.0
offset_right = -23.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.04, 1)
theme_override_styles/panel = SubResource("StyleBoxEmpty_d2in3")
script = ExtResource("1_rvduy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_w4uf4")
theme_override_font_sizes/font_size = 20
text = "Title"
horizontal_alignment = 1

[node name="Title2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_w4uf4")
theme_override_font_sizes/font_size = 15
text = "Title2"
horizontal_alignment = 1

[node name="Pic" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_2bbek")
stretch_mode = 3

[node name="Text" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_w4uf4")
theme_override_font_sizes/font_size = 15
text = "Text"
autowrap_mode = 2

[node name="ResearchTasks" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_w4uf4")
theme_override_font_sizes/font_size = 15
text = "Research Tasks"
autowrap_mode = 2

[node name="Task1" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_w4uf4")
theme_override_font_sizes/font_size = 15
text = "Task 1
"
autowrap_mode = 2

[node name="Task2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_w4uf4")
theme_override_font_sizes/font_size = 15
text = "Task 2
"
autowrap_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
